#26 selecting 'vols' resource type by default was implemented programmatically instead of declarative

--- a/nextgisweb_compulink/compulink_site/amd/ngw-compulink-site/templates/Display.html
+++ b/nextgisweb_compulink/compulink_site/amd/ngw-compulink-site/templates/Display.html
@@ -177,9 +177,9 @@
                              data-dojo-props="region: 'top'">
 
                             <select data-dojo-type="dijit/form/Select" id="resourcesTypeSelector">
-                                <option value="all">ВОЛС и Ситуационные планы</option>
+                                <option value="all" selected="selected">ВОЛС и Ситуационные планы</option>
                                 <option value="sit">Ситуационные планы</option>
-                                <option value="vols" selected="selected">ВОЛС</option>
+                                <option value="vols">ВОЛС</option>
                             </select>
 
                         </div>
@@ -211,7 +211,7 @@
 
                 <!-- Правая панель -->
                 <div id='rightPanel'
-                     data-resource-type-filter="vols",
+                     data-resource-type-filter="",
                      data-dojo-type="dijit/layout/BorderContainer"
                      data-dojo-props="region: 'right', splitter: true, gutters: false"
                      style="width: 250px; padding: 0;">
