#18 added test icons

--- a/nextgisweb_compulink/compulink_site/static/css/layout.css
+++ b/nextgisweb_compulink/compulink_site/static/css/layout.css
@@ -49,12 +49,12 @@
 
 /* right panel trees */
 
-#foclLayersTree .jstree-icon.jstree-themeicon,
-#spLayersTree .jstree-icon.jstree-themeicon {
-    background: url(../img/compulink-sprite.png) -16px, 0;
-    width: 16px;
-    height: 21px; /* todo: for centering icon by text, need implement this by background-position */
-}
+/*#foclLayersTree .jstree-icon.jstree-themeicon,*/
+/*#spLayersTree .jstree-icon.jstree-themeicon {*/
+    /*background: url(../img/compulink-sprite.png) -16px, 0;*/
+    /*width: 16px;*/
+    /*height: 21px; *//* todo: for centering icon by text, need implement this by background-position */
+/*}*/
 
 #rightPanel div.dijitContentPane {
     overflow: hidden;
@@ -113,4 +113,75 @@
 
 #rightPanel i.jstree-checkbox {
     margin-right: 2px;
+}
+
+/*layers types icons*/
+#rightPanel i.jstree-icon.jstree-themeicon {
+    width: 16px;
+    height: 20px;
+}
+
+#rightPanel i.endpoint {
+    background: url('../img/layers-type-sprite.png') 0 0;
+}
+
+#rightPanel i.optical_cross,
+#rightPanel i.sp_optical_cross {
+    background: url('../img/layers-type-sprite.png') -16px 0;
+}
+
+#rightPanel i.fosc,
+#rightPanel i.sp_fosc {
+    background: url('../img/layers-type-sprite.png') -32px 0;
+}
+
+#rightPanel i.optical_cable {
+    background: url('../img/layers-type-sprite.png') -48px 0;
+}
+
+#rightPanel i.access_point,
+#rightPanel i.sp_access_point{
+    background: url('../img/layers-type-sprite.png') -64px 0;
+}
+
+#rightPanel i.transmission_tower {
+    background: url('../img/layers-type-sprite.png') -80px 0;
+}
+
+#rightPanel i.sump_canalization,
+#rightPanel i.sp_sump_canalization{
+    background: url('../img/layers-type-sprite.png') -96px 0;
+}
+
+#rightPanel i.note,
+#rightPanel i.sp_note{
+    background: url('../img/layers-type-sprite.png') -112px 0;
+}
+
+#rightPanel i.sp_electrical_substation {
+    background: url('../img/layers-type-sprite.png') -128px 0;
+}
+
+#rightPanel i.sp_communication_center {
+    background: url('../img/layers-type-sprite.png') -128px 0;
+}
+
+#rightPanel i.sp_other_point_object {
+    background: url('../img/layers-type-sprite.png') -144px 0;
+}
+
+#rightPanel i.sp_focl {
+    background: url('../img/layers-type-sprite.png') -160px 0;
+}
+
+#rightPanel i.sp_overhead_power_line {
+    background: url('../img/layers-type-sprite.png') 0 0;
+}
+
+#rightPanel i.sp_other_line_object {
+    background: url('../img/layers-type-sprite.png') -16px 0;
+}
+
+#rightPanel i.sp_other_polygon_object {
+    background: url('../img/layers-type-sprite.png') -32px 0;
 }
