--- a/nextgisweb_compulink/compulink_site/static/css/layout.css
+++ b/nextgisweb_compulink/compulink_site/static/css/layout.css
@@ -34,6 +34,11 @@
     background-position: -48px, -2px;
 }
 
+#resourcesTree a.jstree-disabled i.jstree-themeicon-custom {
+    background-position: -64px, -2px;
+}
+
+
 #resourcesTree a.jstree-disabled {
     color: black;
 }
@@ -187,4 +192,13 @@
 /* for identification popup */
 div.ngwPopup {
     z-index: 999999 !important;
+}
+
+#resourcesTree a.jstree-disabled i.jstree-checkbox,
+#resourcesTree a.jstree-disabled i.jstree-icon {
+    opacity: 0.7 !important;
+}
+
+#resourcesTree a.jstree-disabled .jstree-checkbox:hover {
+    background-position: -167px -7px;
 }
