Fix #88, fix #87, fix buttons styles

--- a/nextgisweb_compulink/compulink_site/amd/ngw-compulink-site/tool/resource/FeatureEditorWidget.css
+++ b/nextgisweb_compulink/compulink_site/amd/ngw-compulink-site/tool/resource/FeatureEditorWidget.css
@@ -1,4 +1,4 @@
-.claro .ngwButtonStrip .dijitButton { margin: 0; }
+.claro .ngwButtonStrip .dijitButton { margin: 0px; }
 
 .claro .ngwButtonStrip .dijitButton .dijitButtonNode { 
     border-radius: 0;
