--- a/nextgisweb_compulink/compulink_site/amd/ngw-compulink-site/tool/resource/FeatureEditorWidget.css
+++ b/nextgisweb_compulink/compulink_site/amd/ngw-compulink-site/tool/resource/FeatureEditorWidget.css
@@ -13,3 +13,7 @@
 .claro .ngwButtonStrip .dijitButton:last-child .dijitButtonNode {
     border-top-right-radius: 4px;
     border-bottom-right-radius: 4px;}
+
+.claro .dijitTabPaneWrapper {
+    overflow-y: auto;
+}
