Add status upd dt for FoclStruct. Migration added

--- a/nextgisweb_compulink/compulink_admin/amd/ngw-compulink-admin/template/FoclStructWidget.html
+++ b/nextgisweb_compulink/compulink_admin/amd/ngw-compulink-admin/template/FoclStructWidget.html
@@ -30,6 +30,12 @@
                  title="Статус" style="width: 100%">
             </div>
 
+            <div data-dojo-type="dijit/form/ValidationTextBox"
+                 data-dojo-props="required: false"
+                 data-ngw-serialize="status_upd_dt"
+                 title="Дата изменения статуса" style="width: 100%">
+            </div>
+
         </div>
     </div>
 </div>
