--- a/nextgisweb_compulink/compulink_site/amd/ngw-compulink-site/templates/Display.html
+++ b/nextgisweb_compulink/compulink_site/amd/ngw-compulink-site/templates/Display.html
@@ -131,7 +131,11 @@
                          data-dojo-type="dijit/layout/ContentPane"
                          data-dojo-props="region: 'center'"
                          style="width: 100%; padding: 0;">
-
+                        <div id="identifyStatus">
+                            <span class="loader"></span>
+                            <span class="text">Идентификация...</span>
+                            <span class="text-error">Ошибка на сервере!</span>
+                        </div>
                         <div data-dojo-attach-point="mapNode"
                              style="position: absolute; width: 100%; height: 100%; padding: 0;">
 
