Legend panel (bugged)

--- a/nextgisweb_compulink/compulink_site/static/css/icons.css
+++ b/nextgisweb_compulink/compulink_site/static/css/icons.css
@@ -28,6 +28,17 @@
     background-size: cover; /* Generic*/
 }
 
+.iconLegendPanel {
+    background: url('../img/legend_panel.png') no-repeat;
+    width: 16px;
+    height: 16px;
+    -webkit-background-size: cover; /* For WebKit*/
+    -moz-background-size: cover; /* Mozilla*/
+    -o-background-size: cover; /* Opera*/
+    background-size: cover; /* Generic*/
+}
+
+
 .iconMoveTo {
     background: url('../img/move_to.png') no-repeat;
     width: 16px;
