--- a/nextgisweb_compulink/compulink_site/amd/ngw-compulink-site/templates/Display.html
+++ b/nextgisweb_compulink/compulink_site/amd/ngw-compulink-site/templates/Display.html
@@ -1,4 +1,4 @@
-<div data-dojo-type="{{ baseClass }}"
+<div data-dojo-type="${baseClass}"
      data-dojo-attach-point="focusNode"
      style="width: 100%; height: 100%">
 
@@ -115,6 +115,12 @@
                              data-dojo-props="iconClass: 'iconRightPanel', showLabel: false, checked: true, title: 'Скрыть\\показать правую панель'">
                         </div>
 
+                        <div data-dojo-attach-point="rightToolbarSwitch"
+                             data-dojo-attach-event="onChange: switchLegendPane"
+                             data-dojo-type="dijit/form/ToggleButton"
+                             data-dojo-props="iconClass: 'iconLegendPanel', showLabel: false, checked: true, title: 'Скрыть\\показать легенду'">
+                        </div>
+
                         <div data-dojo-type="dijit/ToolbarSeparator"></div>
 
                         <div data-dojo-attach-point="infoNode"
@@ -150,7 +156,7 @@
 
                             <div style="position: absolute; top: 0; right: 0; z-index: 2000; margin: 4px; background-color: rgba(255, 255, 255, 0.5)">
                                 <a href="http://nextgis.ru/nextgis-web/" target="_blank"><img
-                                        src="{{ assetUrl }}img/nextgis.png"/></a>
+                                        src="${ngwConfig.assetUrl}img/nextgis.png"/></a>
                             </div>
                             <a id="permalink" data-dojo-attach-event="onclick:_getPermalink" href="#"
                                style="position: absolute; bottom: 20px; right: 0; z-index: 2000; margin: 4px; font-size: smaller;">Ссылка</a>
@@ -243,6 +249,7 @@
 
 
                     <div data-dojo-type="dijit/layout/BorderContainer"
+                         data-dojo-attach-point=""
                          data-dojo-props="region: 'center'"
                          style="padding-left: 0; position: relative;">
 
@@ -261,14 +268,24 @@
                         <!-- Панель для размещения списка типа слоев Сит плана-->
                         <div data-dojo-attach-point="sitPlanLayersTreePane"
                              data-dojo-type="dijit/layout/ContentPane"
-                             data-dojo-props="region: 'bottom', splitter: true"
+                             data-dojo-props="region: 'top', splitter: true"
                              style="padding: 0; height: 50%; position: relative;" class="sit">
                             <div class="title">Слои Сит. плана</div>
                             <div class="tree-overlay"></div>
                             <div class="tree-wrapper">
                                 <div id="spLayersTree"></div>
                             </div>
+                        </div>
 
+                        <!-- Панель для легенды-->
+                        <div id="legendPane"
+                             data-dojo-type="dijit/layout/ContentPane"
+                             data-dojo-props="region: 'bottom', splitter: true"
+                             style="padding: 0; height: 50%; position: relative;" class="leg">
+                            <div class="title">Легенда</div>
+                            <div>
+                                <img width="100%" src="${ngwConfig.compulinkAssetUrl}img/legend.png" />
+                            </div>
                         </div>
                     </div>
                 </div>
