--- a/nextgisweb_compulink/compulink_site/amd/ngw-compulink-site/templates/Display.html
+++ b/nextgisweb_compulink/compulink_site/amd/ngw-compulink-site/templates/Display.html
@@ -245,7 +245,7 @@
                      data-resource-type-filter="" ,
                      data-dojo-type="dijit/layout/BorderContainer"
                      data-dojo-props="region: 'right', splitter: true, gutters: false"
-                     style="width: 250px; padding: 0;">
+                     style="width: 260px; padding: 0;">
 
 
                     <div data-dojo-type="dijit/layout/BorderContainer"
@@ -283,8 +283,8 @@
                              data-dojo-props="region: 'bottom', splitter: true"
                              style="padding: 0; height: 50%; position: relative;" class="leg">
                             <div class="title">Легенда</div>
-                            <div>
-                                <img width="100%" src="${ngwConfig.compulinkAssetUrl}img/legend.png" />
+                            <div class="legend_cont" s>
+                                <img src="${ngwConfig.compulinkAssetUrl}img/legend.png" />
                             </div>
                         </div>
                     </div>
