--- a/nextgisweb_compulink/compulink_site/amd/ngw-compulink-site/templates/Display.html
+++ b/nextgisweb_compulink/compulink_site/amd/ngw-compulink-site/templates/Display.html
@@ -253,20 +253,9 @@
                          data-dojo-props="region: 'center'"
                          style="padding-left: 0; position: relative;">
 
-                        <!-- Панель для размещения списка типа слоев ВОЛС -->
-                        <div data-dojo-attach-point="foclLayersTreePane"
-                             data-dojo-type="dijit/layout/ContentPane"
-                             data-dojo-props="region: 'center'"
-                             style="padding: 0; height: 50%; position: relative;" class="vols">
-                            <div class="title">Слои ВОЛС</div>
-                            <div class="tree-overlay"></div>
-                            <div class="tree-wrapper">
-                                <div id="foclLayersTree"></div>
-                            </div>
-                        </div>
-
                         <!-- Панель для размещения списка типа слоев Сит плана-->
-                        <div data-dojo-attach-point="sitPlanLayersTreePane"
+                        <div id="sitLayersPane"
+                             data-dojo-attach-point="sitPlanLayersTreePane"
                              data-dojo-type="dijit/layout/ContentPane"
                              data-dojo-props="region: 'top', splitter: true"
                              style="padding: 0; height: 50%; position: relative;" class="sit">
@@ -274,6 +263,19 @@
                             <div class="tree-overlay"></div>
                             <div class="tree-wrapper">
                                 <div id="spLayersTree"></div>
+                            </div>
+                        </div>
+
+                        <!-- Панель для размещения списка типа слоев ВОЛС -->
+                        <div id="foclLayersPane"
+                             data-dojo-attach-point="foclLayersTreePane"
+                             data-dojo-type="dijit/layout/ContentPane"
+                             data-dojo-props="region: 'center'"
+                             style="padding: 0; height: 50%; position: relative;" class="vols">
+                            <div class="title">Слои ВОЛС</div>
+                            <div class="tree-overlay"></div>
+                            <div class="tree-wrapper">
+                                <div id="foclLayersTree"></div>
                             </div>
                         </div>
 
