Ссылка на отчёт

--- a/nextgisweb_compulink/compulink_site/amd/ngw-compulink-site/templates/DisplayHeader.html
+++ b/nextgisweb_compulink/compulink_site/amd/ngw-compulink-site/templates/DisplayHeader.html
@@ -15,6 +15,7 @@
                 <li><a href="{{ headerData.loginUrl }}">Вход</a></li>
             {% else %}
                 <li class="user">{{ headerData.userName }}</li>
+                <li><a href="{{ headerData.reportUrl }}">Отчёт</a></li>
                 <li><a href="{{ headerData.logoutUrl }}">Выход</a></li>
             {% endif %}
         </ul>
