#140 Кнопка выгрузки в Excel

--- a/nextgisweb_compulink/compulink_reporting/amd/ngw-compulink-reporting/template/ReportGrid.html
+++ b/nextgisweb_compulink/compulink_reporting/amd/ngw-compulink-reporting/template/ReportGrid.html
@@ -33,6 +33,10 @@
                 data-dojo-attach-point="buildReport"
                 type="button">Построить</button>
 
+        <button data-dojo-type="dijit/form/Button"
+                data-dojo-attach-point="exportExcel"
+                type="button">Выгрузить в Excel</button>
+
     </div>
 
 </div>
