--- a/nextgisweb_compulink/compulink_site/amd/ngw-compulink-site/templates/Display.html
+++ b/nextgisweb_compulink/compulink_site/amd/ngw-compulink-site/templates/Display.html
@@ -1,11 +1,20 @@
-<div data-dojo-type="${baseClass}"
-     data-dojo-attach-point="focusNode"
-     style="width: 100%; height: 100%">
+<div id="page_pane" data-dojo-type="dijit/layout/BorderContainer" data-dojo-props="gutters: false"
+     style="width: 100%; height: 100%;">
+
+    <div id="headerContainer"
+         data-dojo-type="dijit/layout/ContentPane"
+         data-dojo-props="region: 'top'"
+            style="width: 100%; height: 5%;">
+        <div data-dojo-id="displayHeader"
+             data-dojo-type="ngw-compulink-site/DisplayHeader"
+             data-dojo-props="">
+        </div>
+    </div>
 
     <div data-dojo-attach-point="tabContainer"
          data-dojo-type="dijit/layout/TabContainer"
-         data-dojo-props="tabPosition: 'top'"
-         style="width: 100%; height: 100%;">
+         data-dojo-props="tabPosition: 'top', region:'center'"
+         style="width: 100%; height: 95%;">
 
         <!-- Незакрываемый таб для размещения карты и дерева слоев -->
         <!-- Если у таба нет иконки и он незакрываем, то плывет верстка! -->
@@ -18,15 +27,6 @@
                  data-dojo-type="dijit/layout/BorderContainer"
                  data-dojo-props="gutters: false"
                  style="width: 100%;">
-
-                <div data-dojo-attach-point="mapToolbar2"
-                     data-dojo-type="dijit/Toolbar"
-                     data-dojo-props="region: 'top'">
-                    <div data-dojo-id="displayHeader"
-                         data-dojo-type="ngw-compulink-site/DisplayHeader"
-                         data-dojo-props="">
-                    </div>
-                </div>
 
                 <!-- Панель для размещения OL карты -->
                 <div id="centerContainer"
@@ -286,7 +286,7 @@
                              style="padding: 0; height: 55%; position: relative;" class="leg">
                             <div class="title">Легенда</div>
                             <div class="legend_cont" s>
-                                <img src="${ngwConfig.compulinkAssetUrl}img/legend.png" />
+                                <img src="${ngwConfig.compulinkAssetUrl}img/legend.png"/>
                             </div>
                         </div>
                     </div>
@@ -296,5 +296,4 @@
         </div>
 
     </div>
-
 </div>
