--- a/nextgisweb_compulink/compulink_site/amd/ngw-compulink-site/templates/DisplayHeader.html
+++ b/nextgisweb_compulink/compulink_site/amd/ngw-compulink-site/templates/DisplayHeader.html
@@ -11,7 +11,8 @@
                 <a href="#" id="menuLink1" class="pure-menu-link user">{{ headerData.userName }}</a>
                 <ul class="pure-menu-children">
                     {% if headerData.isAdm %}
-                        <li class="pure-menu-item"><a href="{{ headerData.rootPan }}" class="pure-menu-link">Панель управления</a></li>
+                        <li class="pure-menu-item"><a href="{{ headerData.resourcesUrl }}" class="pure-menu-link">Ресурсы</a></li>
+                        <li class="pure-menu-item"><a href="{{ headerData.controlPanelUrl }}" class="pure-menu-link">Панель управления</a></li>
                         <li class="pure-menu-item"><a href="{{ headerData.reportUrl }}" class="pure-menu-link">Отчёт</a></li>
                     {% endif %}
                     <li class="pure-menu-item"><a href="{{ headerData.logoutUrl }}" class="pure-menu-link">Выход</a></li>
