--- a/nextgisweb_compulink/compulink_site/amd/ngw-compulink-site/templates/DisplayHeader.html
+++ b/nextgisweb_compulink/compulink_site/amd/ngw-compulink-site/templates/DisplayHeader.html
@@ -1,5 +1,5 @@
 <div id="header" class="header" style="padding: 0; margin: 0">
-    <div class="home-menu pure-menu pure-menu-horizontal">
+    <div class="home-menu pure-menu pure-menu-horizontal" style="overflow:visible;">
         <img width="108" height="28" class="logo" src="{{ headerData.srcLogo }}"/>
 
         <a class="pure-menu-heading" href="{{ headerData.appUrl }}" style="float:left;">
@@ -8,8 +8,8 @@
 
         <ul class="pure-menu-list">
             <li class="pure-menu-item pure-menu-has-children pure-menu-allow-hover">
-                <a href="#" id="menuLink1" class="pure-menu-link user">{{ headerData.userName }}</a>
-                <ul class="pure-menu-children">
+                <a href="#" id="menuLink1" class="pure-menu-link user" style="padding-right: 3ex;">{{ headerData.userName }}</a>
+                <ul class="pure-menu-children" style="background-color: inherit;">
                     {% if headerData.isAdm %}
                         <li class="pure-menu-item"><a href="{{ headerData.resourcesUrl }}" class="pure-menu-link">Ресурсы</a></li>
                         <li class="pure-menu-item"><a href="{{ headerData.controlPanelUrl }}" class="pure-menu-link">Панель управления</a></li>
