Немного подправлено меню

--- a/nextgisweb_compulink/compulink_site/amd/ngw-compulink-site/templates/DisplayHeader.html
+++ b/nextgisweb_compulink/compulink_site/amd/ngw-compulink-site/templates/DisplayHeader.html
@@ -8,8 +8,8 @@
 
         <ul class="pure-menu-list">
             <li class="pure-menu-item pure-menu-has-children pure-menu-allow-hover">
-                <a href="#" id="menuLink1" class="pure-menu-link user" style="padding-right: 3ex;">{{ headerData.userName }}</a>
-                <ul class="pure-menu-children" style="background-color: inherit;">
+                <a href="#" id="menuLink1" class="pure-menu-link user" style="padding-right: 2.5ex;">{{ headerData.userName }}</a>
+                <ul class="pure-menu-children" style="background-color: #2D3E50;">
                     {% if headerData.isAdm %}
                         <li class="pure-menu-item"><a href="{{ headerData.resourcesUrl }}" class="pure-menu-link">Ресурсы</a></li>
                         <li class="pure-menu-item"><a href="{{ headerData.controlPanelUrl }}" class="pure-menu-link">Панель управления</a></li>
