--- a/nextgisweb_compulink/compulink_site/amd/ngw-compulink-site/templates/Display.html
+++ b/nextgisweb_compulink/compulink_site/amd/ngw-compulink-site/templates/Display.html
@@ -4,7 +4,7 @@
     <div id="headerContainer"
          data-dojo-type="dijit/layout/ContentPane"
          data-dojo-props="region: 'top'"
-            style="width: 100%; height: 13%;">
+            style="width: 100%; height: 3%; overflow:visible;">
         <div data-dojo-id="displayHeader"
              data-dojo-type="ngw-compulink-site/DisplayHeader"
              data-dojo-props="">
@@ -14,7 +14,7 @@
     <div data-dojo-attach-point="tabContainer"
          data-dojo-type="dijit/layout/TabContainer"
          data-dojo-props="tabPosition: 'top', region:'center'"
-         style="width: 100%; height: 87%;">
+         style="width: 100%; height: 97%;">
 
         <!-- Незакрываемый таб для размещения карты и дерева слоев -->
         <!-- Если у таба нет иконки и он незакрываем, то плывет верстка! -->
