--- a/nextgisweb_compulink/compulink_site/amd/ngw-compulink-site/templates/Display.html
+++ b/nextgisweb_compulink/compulink_site/amd/ngw-compulink-site/templates/Display.html
@@ -1,20 +1,11 @@
-<div id="page_pane" data-dojo-type="dijit/layout/BorderContainer" data-dojo-props="gutters: false"
-     style="width: 100%; height: 100%;">
-
-    <div id="headerContainer"
-         data-dojo-type="dijit/layout/ContentPane"
-         data-dojo-props="region: 'top'"
-            style="width: 100%; height: 3%; overflow:visible;">
-        <div data-dojo-id="displayHeader"
-             data-dojo-type="ngw-compulink-site/DisplayHeader"
-             data-dojo-props="">
-        </div>
-    </div>
+<div data-dojo-type="${baseClass}"
+     data-dojo-attach-point="focusNode"
+     style="width: 100%; height: 100%">
 
     <div data-dojo-attach-point="tabContainer"
          data-dojo-type="dijit/layout/TabContainer"
-         data-dojo-props="tabPosition: 'top', region:'center'"
-         style="width: 100%; height: 97%;">
+         data-dojo-props="tabPosition: 'top'"
+         style="width: 100%; height: 100%;">
 
         <!-- Незакрываемый таб для размещения карты и дерева слоев -->
         <!-- Если у таба нет иконки и он незакрываем, то плывет верстка! -->
@@ -26,13 +17,13 @@
             <div id="mainContainer"
                  data-dojo-type="dijit/layout/BorderContainer"
                  data-dojo-props="gutters: false"
-                 style="width: 100%;">
+                 style="width: 100%; height: 100%;">
 
                 <!-- Панель для размещения OL карты -->
                 <div id="centerContainer"
                      data-dojo-type="dijit/layout/BorderContainer"
                      data-dojo-props="region: 'center'"
-                     style="padding-left: 0; padding-right: 0px">
+                     style="padding-left: 0;">
 
                     <!-- Тулбар над картой -->
                     <div data-dojo-attach-point="mapToolbar"
@@ -286,7 +277,7 @@
                              style="padding: 0; height: 55%; position: relative;" class="leg">
                             <div class="title">Легенда</div>
                             <div class="legend_cont" s>
-                                <img src="${ngwConfig.compulinkAssetUrl}img/legend.png"/>
+                                <img src="${ngwConfig.compulinkAssetUrl}img/legend.png" />
                             </div>
                         </div>
                     </div>
@@ -296,4 +287,5 @@
         </div>
 
     </div>
+
 </div>
