--- a/nextgisweb_compulink/compulink_site/static/css/layout.css
+++ b/nextgisweb_compulink/compulink_site/static/css/layout.css
@@ -1,3 +1,23 @@
+div.main-wrapper {
+    width: 100%;
+    height: 100%;
+}
+
+div.header-wrapper {
+    position: absolute;
+    top: 0;
+    right: 0;
+    left: 0;
+}
+
+div.body-wrapper {
+    position: absolute;
+    top: 28px;
+    right: 0;
+    left: 0;
+    bottom: 0;
+}
+
 #headerContainer {
     display: table;
     padding: 0;
