#190 fixed by overriding CSS rule ".claro .dijitTabPaneWrapper" from FeatureEditorWidget.css

--- a/nextgisweb_compulink/compulink_site/static/css/layout.css
+++ b/nextgisweb_compulink/compulink_site/static/css/layout.css
@@ -18,6 +18,10 @@ div.body-wrapper {
     bottom: 0;
 }
 
+div.body-wrapper .dijitTabPaneWrapper {
+    overflow: hidden;
+}
+
 #headerContainer {
     display: table;
     padding: 0;
