--- a/nextgisweb_compulink/compulink_reporting/amd/ngw-compulink-reporting/template/ReportGrid.html
+++ b/nextgisweb_compulink/compulink_reporting/amd/ngw-compulink-reporting/template/ReportGrid.html
@@ -1,13 +1,6 @@
-<div data-dojo-type="${baseClass}">
-
-    <div data-dojo-attach-point="mapToolbar2"
-         data-dojo-type="dijit/Toolbar"
-         data-dojo-props="region: 'top'">
-        <div data-dojo-id="displayHeader"
-             data-dojo-type="ngw-compulink-site/DisplayHeader"
-             data-dojo-props="">
-        </div>
-    </div>
+<div data-dojo-type="${baseClass}"
+     data-dojo-attach-point="focusNode"
+     style="width: 100%; height: 100%">
 
     <div data-dojo-attach-point="gridPane" data-dojo-type="dijit/layout/ContentPane"
         data-dojo-props="region: 'center'" style="padding: 0;">
