--- a/nextgisweb_compulink/compulink_site/amd/ngw-compulink-site/templates/DisplayHeader.html
+++ b/nextgisweb_compulink/compulink_site/amd/ngw-compulink-site/templates/DisplayHeader.html
@@ -6,21 +6,29 @@
             {{ headerData.fullName }}
         </a>
 
-        <ul class="pure-menu-list">
+        <ul id="nav">
             {% if headerData.isAdm %}
-                <li class="pure-menu-item"><a href="{{ headerData.resourcesUrl }}" class="pure-menu-link">Ресурсы</a></li>
-                <li class="pure-menu-item"><a href="{{ headerData.controlPanelUrl }}" class="pure-menu-link">Панель управления</a></li>
+            <li class="pure-menu-item">
+                <a href="{{ headerData.resourcesUrl }}" title="Ресурсы">Ресурсы</a>
+            </li>
+            <li class="pure-menu-item">
+                <a href="{{ headerData.controlPanelUrl }}" title="Панель управления">Панель управления</a>
+            </li>
             {% endif %}
-            <li class="pure-menu-item pure-menu-has-children pure-menu-allow-hover">
-                <a href="#" id="menuLink1" class="pure-menu-link">Отчёты</a>
-                <ul class="pure-menu-children" style="background-color: #2D3E50;">
-                    <li class="pure-menu-item"><a href="{{ headerData.reportUrl }}" class="pure-menu-link">Отчёт о ходе строительства</a></li>
+            <li>
+                <a href="#" title="Отчёты">Отчёты</a>
+                <ul>
+                    <li>
+                        <a title="Отчёт о ходе строительства" href="{{ headerData.reportUrl }}">Отчёт о ходе строительства</a>
+                    </li>
                 </ul>
             </li>
-            <li class="pure-menu-item pure-menu-has-children pure-menu-allow-hover">
-                <a href="#" id="menuLink2" class="pure-menu-link user" style="padding-right: 2.5ex;">{{ headerData.userName }}</a>
-                <ul class="pure-menu-children" style="background-color: #2D3E50;">
-                    <li class="pure-menu-item"><a href="{{ headerData.logoutUrl }}" class="pure-menu-link">Выход</a></li>
+            <li>
+                <a href="#" title="Имя пользователя">{{headerData.userName }}</a>
+                <ul>
+                    <li>
+                        <a href="{{ headerData.logoutUrl }}" title="Выход">Выход</a>
+                    </li>
                 </ul>
             </li>
         </ul>
