--- a/nextgisweb_compulink/compulink_site/amd/ngw-compulink-site/templates/css/DisplayHeader.css
+++ b/nextgisweb_compulink/compulink_site/amd/ngw-compulink-site/templates/css/DisplayHeader.css
@@ -51,3 +51,9 @@
     display: block; /*DISPLAY ONLY WHEN ITEM IS HOVERED*/
     right: 0;
 }
+
+#header a.header-title {
+    color: white;
+    text-decoration: none;
+    text-transform: capitalize;
+}
