--- a/nextgisweb_compulink/compulink_site/amd/ngw-compulink-site/templates/DisplayHeader.html
+++ b/nextgisweb_compulink/compulink_site/amd/ngw-compulink-site/templates/DisplayHeader.html
@@ -14,11 +14,11 @@
                 <a href="{{ headerData.resourcesUrl }}" title="На страницу ресурсов">Ресурсы</a>
             </li>
             <li class="pure-menu-item">
-                <a href="{{ headerData.controlPanelUrl }}" title="К панеле управления">Панель управления</a>
+                <a href="{{ headerData.controlPanelUrl }}" title="К панели управления">Панель управления</a>
             </li>
             {% endif %}
             <li>
-                <a href="#" title="Отчёты">Отчёты</a>
+                <a href="#" title="Отчёты" class="parent-link">Отчёты</a>
                 <ul>
                     <li>
                         <a title="Открыть отчёт о ходе строительства" href="{{ headerData.reportUrl }}">Отчёт о ходе
@@ -27,7 +27,7 @@
                 </ul>
             </li>
             <li>
-                <a href="#" title="Имя пользователя">{{headerData.userName }}</a>
+                <a href="#" title="Имя пользователя" class="parent-link">{{headerData.userName }}</a>
                 <ul>
                     <li>
                         <a href="{{ headerData.logoutUrl }}" title="Выход из системы">Выход</a>
