--- a/nextgisweb_compulink/compulink_site/amd/ngw-compulink-site/templates/css/DisplayHeader.css
+++ b/nextgisweb_compulink/compulink_site/amd/ngw-compulink-site/templates/css/DisplayHeader.css
@@ -57,6 +57,10 @@
     content: "\25BE";
 }
 
+#nav ul.child-items {
+    min-width: 100%;
+}
+
 #header a.header-title {
     color: white;
     text-decoration: none;
