#193 color for hovered text was set

--- a/nextgisweb_compulink/compulink_site/amd/ngw-compulink-site/templates/css/DisplayHeader.css
+++ b/nextgisweb_compulink/compulink_site/amd/ngw-compulink-site/templates/css/DisplayHeader.css
@@ -52,6 +52,10 @@
     right: 0;
 }
 
+#nav li a:hover {
+    color: #cae1f3;
+}
+
 #nav a.parent-link:after {
     padding-left: 3px;
     content: "\25BE";
