--- a/nextgisweb_compulink/compulink_site/amd/ngw-compulink-site/templates/Display.html
+++ b/nextgisweb_compulink/compulink_site/amd/ngw-compulink-site/templates/Display.html
@@ -276,7 +276,7 @@
                              data-dojo-props="region: 'bottom', splitter: true"
                              style="padding: 0; height: 55%; position: relative;" class="leg">
                             <div class="title">Легенда</div>
-                            <div class="legend_cont" s>
+                            <div class="legend_cont">
                                 <img src="${ngwConfig.compulinkAssetUrl}img/legend.png" />
                             </div>
                         </div>
