--- a/nextgisweb_compulink/compulink_site/amd/ngw-compulink-site/templates/ConfirmDialog.html
+++ b/nextgisweb_compulink/compulink_site/amd/ngw-compulink-site/templates/ConfirmDialog.html
@@ -1,7 +1,7 @@
 <div style="width:300px;">
 
     <div class="dijitDialogPaneContentArea">
-        <div data-dojo-attach-point="contentNode">
+        <div data-dojo-attach-point="contentNode" class="cd-contentNode">
             ${message}
         </div>
     </div>
